2022-10-04  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/dg.test: Add tests for skipping tests
	based on special result codes from mock-dg-prune.
	(mock-dg-test): Add directive for output text.
	(mock-dg-prune): Recognize special markers for
	UNRESOLVED/UNSUPPORTED/UNTESTED result codes.

2022-10-01  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockutil.tcl (test_proc_with_mocks):
	Report test failure instead of raising errors.

	* testsuite/runtest.libs/dg.test: Add more unit tests.
	(eval_tests): Copy this procedure...
	* testsuite/runtest.libs/target.test (eval_tests): ...from here.

2022-09-30  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockutil.tcl (test_proc_with_mocks): Add
	usage comment and option to match number of calls for test.
	(create_test_interpreter): Add support for mockvfs.

	* testsuite/runtest.libs/dg.test: New file.

2022-09-29  Jacob Bachmeyer  <jcb@gnu.org>

	PR58065

	* testsuite/runtest.libs/mockvfs.tcl: New file.

2022-09-26  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.libs/libs.exp (process_test): Add forward
	slash to the list of characters recognized as text.

2022-01-21  Jacob Bachmeyer  <jcb@gnu.org>

	PR53427

	* runtest.exp (runtest): Reset the global warning and error
	counters before running each test file.  This prevents an error
	"left over" from a previous test file from causing the first test
	in the next file to be spuriously reported as UNRESOLVED.

	* Makefile.am (TESTSUITE_FILES): Add new files.

	* testsuite/runtest.main/pr53427.exp: New file for regression test.
	* testsuite/runtest.main/nested/testsuite/pr53427.test/a.exp: Likewise.
	* testsuite/runtest.main/nested/testsuite/pr53427.test/b.exp: Likewise.

2021-06-29  Jacob Bachmeyer  <jcb@gnu.org>

	PR49250

	* runtest.exp: Adjust detection logic for deprecated broken legacy
	case of a testsuite not actually in a testsuite/ directory.
